--- a/style.css
+++ b/style.css
@@ -4,9 +4,13 @@
     box-sizing: border-box;
 }
 
-body{
-    display:flex;
+body, button {
+    display: flex;
     flex-direction: column;
+    background: #202124;
+    color: white;
+    font-family: 'Roboto', sans-serif;
+    font-weight: lighter !important;
 }
 
 .title-winner-screen {
@@ -18,36 +22,84 @@ body{
     margin-top: 20px;
 }
 
-.title{
-    display : flex;
-    justify-content : center;
-    align-items : center;
+.title {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     font-size: 32px;
     margin-top: 50px;
     margin-bottom: 40px;
 }
 
-.play-again{
-    margin-top: 20px;
+.winner-screen {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 50px;
 }
 
-.container{
+.play-again {
+    margin-top: 20px;
+    padding: 5px 10px;
+    border: 0px black solid;
+    border-radius: 10px;
+    background: hsl(158, 95%, 40%);
+    color: white;
+    font-size: 20px;
+    cursor: pointer;
+}
+
+.play-again:hover{
+    background: hsl(158, 95%, 34%);;
+}
+
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
     margin-top: 200px;
+    gap: 10px;
 }
 
-.scoreboard{
+.container button {
+    padding: 10px 15px;
+    border: 0px black solid;
+    background: hsl(210, 100%, 60%);
+    color: white;
+    border-radius: 10px;
+    font-weight: 600;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+.container button:hover {
+    background: hsl(210, 100%, 40%);
+}
+
+.scoreboard {
     display: flex;
     justify-content: space-around;
     gap: 200px;
+    font-size: 50px;
 }
 
-.displayer{
+.player-score,
+.computer-score {
+    font-size: 120px;
+}
+
+.player-stats,
+.computer-stats {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 20px;
 }
 
+
+.displayer {
+    display: flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    margin-top: -90px;
+}
